Bug 5 resolvido: foi acrescentada a propriedade 'text-align: center' a todo elemento td.

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -108,6 +108,10 @@ table {
     width: 60%;
 }
 
+td {
+    text-align: center;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
